Bug 74687 - FORMATTING: Undoing 'Clear Direct Formatting' hangs Libreoffice
Summary: FORMATTING: Undoing 'Clear Direct Formatting' hangs Libreoffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:4.3.0 target:4.2.5
Keywords: possibleRegression, regression
Depends on:
Blocks:
 
Reported: 2014-02-07 17:48 UTC by me
Modified: 2015-12-15 22:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description me 2014-02-07 17:48:51 UTC
Problem description: If I clear direct formatting then use undo to re-apply libreoffice becomes unresponsive and has to be closed with program not responding dialogue. I often use clear direct formatting then undo to make sure cells are wrapped correctly prior to printing (sometimes that still doesn't work but that is another matter...)

Steps to reproduce:
1. Select all
2. Right click and select clear direct formatting
3. Use undo

Current behavior: Program hangs, on trying to shut down has error message. Re-opening file goes into recovery mode.

Expected behavior: On applying undo the formatting should be re-applied.

              
Operating System: Windows 7
Version: 4.2.0.4 release
Last worked in: 4.1.4.2 release
Comment 1 m_a_riosv 2014-02-08 00:09:05 UTC
Hime@willpom.com, thanks for reporting.

Reproducible with:
Win7x64Ultimate.
Version: 4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Version: 4.2.1.0.0+ Build ID: 63950ec72806489b41c2109f5c3840dcf22f4c6c
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-02-07_00:47:07
Version: 4.3.0.0.alpha0+ Build ID: ff5ad7e379315faa3f4afa009d23f34c7d231d9a
   TinderBox: Win-x86@42, Branch:master, Time: 2014-02-03_23:44:46

Last working:
Version: 4.1.6.0.0+ Build ID: fd07d1758ee62eebfe95b157ba651de282feec0
Comment 2 m_a_riosv 2014-03-03 01:30:06 UTC
Still reproducible:
Win7x64
Version: 4.3.0.0.alpha0+ Build ID: 09155190d817dd880cc96a106114618b46a5a7e5
   TinderBox: Win-x86@39, Branch:master, Time: 2014-03-01_23:56:24
Comment 3 Kohei Yoshida 2014-04-16 19:15:34 UTC
Found the cause.
Comment 4 Commit Notification 2014-04-16 19:22:13 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d1fbbe81b4435765d3f69c6bcae2840dc629912

fdo#74687: Undo & redo of format-only changes don't need broadcasting.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Kohei Yoshida 2014-04-16 19:22:59 UTC
4.2 backport: https://gerrit.libreoffice.org/9075
Comment 6 Commit Notification 2014-04-17 00:11:33 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8d63fce4ec73aa4ee9fd5348fe675e4f0b0a3b6b&h=libreoffice-4-2

fdo#74687: Undo & redo of format-only changes don't need broadcasting.


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2014-04-17 00:12:34 UTC
Fixed.
Comment 8 m_a_riosv 2014-04-20 02:29:16 UTC
Thanks Kohei,
verified.
Win7x64Ultimate
Version: 4.2.5.0.0+ Build ID: cc45204a7a286cef32fc7faf266dc2da235c1ae2
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-04-17_02:46:49
Version: 4.3.0.0.alpha0+ Build ID: 0ce6d9bcea7c37a7cb2c42e8393e2e20780bd171
   TinderBox: Win-x86@39, Branch:master, Time: 2014-04-17_00:11:33
Comment 9 Robinson Tryon (qubit) 2015-12-15 22:11:02 UTC
Migrating Whiteboard tags to Keywords: (PossibleRegression)
[NinjaEdit]