fdo#74687: Undo & redo of format-only changes don't need broadcasting.

Also discovered that the undo path was broadcasting twice.  Let's only
do it once.

Change-Id: I169f1659aecb1eb78be3a497e244f79c5883e50f