sc/source/ui/undo/undoblk3.cxx
@@ -142,7 +142,6 @@ void ScUndoDeleteContents::DoChange( const bool bUndo )
         aCopyRange.aEnd.SetTab(nTabCount-1);
 
         pUndoDoc->CopyToDocument( aCopyRange, nUndoFlags, bMulti, pDoc, &aMarkData );
-        BroadcastChanges(aCopyRange);
 
         DoSdrUndoAction( pDrawUndo, pDoc );
 
@@ -184,7 +183,10 @@ void ScUndoDeleteContents::Undo()
     DoChange( true );
     EndUndo();
 
-    BroadcastChanges(aRange);
+    if (nFlags & IDF_CONTENTS)
+        // Broadcast only when the content changes. fdo#74687
+        BroadcastChanges(aRange);
+
     HelperNotifyChanges::NotifyIfChangesListeners(*pDocShell, aRange);
 }
 
@@ -194,7 +196,10 @@ void ScUndoDeleteContents::Redo()
     DoChange( false );
     EndRedo();
 
-    BroadcastChanges(aRange);
+    if (nFlags & IDF_CONTENTS)
+        // Broadcast only when the content changes. fdo#74687
+        BroadcastChanges(aRange);
+
     HelperNotifyChanges::NotifyIfChangesListeners(*pDocShell, aRange);
 }
 
